--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "nodejs-basics",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "build a web server",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+    "dev": "nodemon server"
   },
   "author": "Krishnapriya",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "date-fns": "^2.23.0",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  }
 }
