--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "date-fns": "^2.23.0",
+    "uuid": "^8.3.2",
     "express": "^4.19.2",
-    "uuid": "^8.3.2"
+    "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
+    "cookie-parser": "^1.4.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
