--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^2.23.0",
-    "uuid": "^8.3.2",
-    "express": "^4.19.2",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "cookie-parser": "^1.4.6"
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
